<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_login">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="358dp"
        android:layout_height="574dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_login"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgFotomascota"
                android:layout_width="99dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/imagenmarcador"
                android:padding="10dp"
                android:src="@drawable/mascota"
                tools:layout_editor_absoluteX="277dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/eNombreMascota"
            android:layout_width="133dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/marcador"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/eDescripcionMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/descripcion"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eNombreMascota" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecView"
            android:layout_width="342dp"
            android:layout_height="312dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eDescripcionMascota"
            tools:ignore="MissingConstraints"
            tools:listitem="@layout/item_list">
        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/BtnComentar"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/dialog_insert_comment_black_24dp"
            android:padding="20dp"
            android:text="@string/comentar"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/corazon_rojo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:contentDescription="Favorito"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icono_corazon_sinreleno"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/eNoHayComentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:text="No hay Comentarios......"
            android:textColor="#FFFFFF"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/RecView"
            tools:ignore="MissingConstraints" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>